[gd_scene load_steps=4 format=3 uid="uid://b1234567890"]

[ext_resource type="Script" path="res://scripts/components/Card.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.1, 0.1, 0.1, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 1, 1, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2"]
bg_color = Color(0.15, 0.15, 0.15, 0.8)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="Card" type="Control"]
custom_minimum_size = Vector2(120, 180)
anchor_right = 0.0
anchor_bottom = 0.0
script = ExtResource("1")

[node name="CardContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="VBoxContainer" type="VBoxContainer" parent="CardContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="Header" type="HBoxContainer" parent="CardContainer/VBoxContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="CardContainer/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 1, 1, 1)
theme_override_font_sizes/font_size = 14
text = "Card Name"
horizontal_alignment = 1

[node name="CostContainer" type="PanelContainer" parent="CardContainer/VBoxContainer/Header"]
layout_mode = 2
custom_minimum_size = Vector2(24, 24)
theme_override_styles/panel = SubResource("StyleBoxFlat_2")

[node name="CostLabel" type="Label" parent="CardContainer/VBoxContainer/Header/CostContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.5, 0, 1)
theme_override_font_sizes/font_size = 16
text = "2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CardContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="DescriptionLabel" type="RichTextLabel" parent="CardContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "Deal [color=red]8 damage[/color] to target enemy."
fit_content = true

[node name="CodePanel" type="PanelContainer" parent="CardContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_2")

[node name="CodeSnippet" type="RichTextLabel" parent="CardContainer/VBoxContainer/CodePanel"]
layout_mode = 2
theme_override_colors/default_color = Color(0, 1, 0, 1)
theme_override_font_sizes/mono_font_size = 10
bbcode_enabled = true
text = "[code]enemy.hp -= 8;[/code]"
fit_content = true